--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FacebookApplication"
-        tools:targetApi="31">
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
+        tools:targetApi="31"
+        >
+
         <activity
             android:name=".HomeActivity"
+            android:exported="false" />
+        <activity android:name=".ProductListActivity"
+            android:exported="false" />
+        <activity android:name=".DetailActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
